manifests/cleaner.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cleaner-worker
  namespace: frico
  name: cleaner-worker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cleaner-worker
  template:
    metadata:
      labels:
        app: cleaner-worker
      name: cleaner-worker
    spec:
      serviceAccountName: frico
      automountServiceAccountToken: true
      nodeSelector:
        tier: management
      containers:
        - name: cleaner
          image: ghcr.io/nemcikjan/dizp-eaoda-worker
          imagePullPolicy: IfNotPresent
          args:
            - /app/pod_cleaner.worker.py
      terminationGracePeriodSeconds: 5
