manifests/creator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: creator-worker
  namespace: frico
  name: creator-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: creator-worker
  template:
    metadata:
      labels:
        app: creator-worker
      name: creator-worker
    spec:
      serviceAccountName: frico
      containers:
        - name: creator
          image: ghcr.io/nemcikjan/dizp-eaoda-worker
          imagePullPolicy: IfNotPresent
          args:
            - /app/pod_creator.worker.py
      terminationGracePeriodSeconds: 5
