manifests/deleter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deleter-worker
  namespace: frico
  name: deleter-worker
spec:
  replicas: 4
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deleter-worker
  template:
    metadata:
      labels:
        app: deleter-worker
      name: deleter-worker
    spec:
      serviceAccountName: frico
      automountServiceAccountToken: true
      containers:
        - name: deleter
          image: ghcr.io/nemcikjan/dizp-eaoda-worker
          imagePullPolicy: IfNotPresent
          args:
            - /app/pod_deleter.worker.py
      terminationGracePeriodSeconds: 5
