manifests/rescheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rescheduler-worker
  namespace: frico
  name: rescheduler-worker
spec:
  replicas: 4
  selector:
    matchLabels:
      app: rescheduler-worker
  template:
    metadata:
      labels:
        app: rescheduler-worker
      name: rescheduler-worker
    spec:
      serviceAccountName: frico
      containers:
        - name: rescheduler
          image: ghcr.io/nemcikjan/dizp-eaoda-worker
          imagePullPolicy: IfNotPresent
          args:
            - /app/pod_rescheduler.worker.py
      terminationGracePeriodSeconds: 5
