manifests/watcher.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: watcher-worker
  namespace: frico
  name: watcher-worker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: watcher-worker
  template:
    metadata:
      labels:
        app: watcher-worker
      name: watcher-worker
    spec:
      serviceAccountName: frico
      automountServiceAccountToken: true
      containers:
        - name: deleter
          image: ghcr.io/nemcikjan/dizp-eaoda-worker
          imagePullPolicy: IfNotPresent
          args:
            - /app/pod_watcher.worker.py
      terminationGracePeriodSeconds: 5
