manifests/worker.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: eaoda-worker
  namespace: frico
  name: eaoda-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eaoda-worker
  template:
    metadata:
      labels:
        app: eaoda-worker
      name: eaoda-worker
    spec:
      serviceAccountName: frico
      # nodeSelector:
      #   tier: compute
      containers:
        - name: worker
          image: ghcr.io/nemcikjan/dizp-eaoda-worker
          imagePullPolicy: IfNotPresent
          command:
            - python
            - /app/worker.py
          #   - readOnly: true
          #     mountPath: /certs
          #     name: webhook-certs
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     scheme: HTTPS
          #     port: 443
          #   initialDelaySeconds: 3
          #   periodSeconds: 5
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     scheme: HTTPS
          #     port: 443
          #   initialDelaySeconds: 3
          #   periodSeconds: 5
      terminationGracePeriodSeconds: 20
