manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: balancer-controller-ing
  labels:
    app: balancer-controller
spec:
  rules:
    - host: vault.umbriel.k8s.solargis.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-balancer
                port:
                  name: http
